Defaults for JVM in jgroups.sh